@@ -11,6 +11,7 @@ use Math::Prime::Util::GMP qw/
    is_almost_extra_strong_lucas_pseudoprime
    is_prime
    lucas_sequence
+   miller_rabin_random
    primes/;
 my $extra = defined $ENV{EXTENDED_TESTING} && $ENV{EXTENDED_TESTING};
 
@@ -96,6 +97,7 @@ plan tests => 0 + 9
                 + scalar(keys %lucas_sequences)
               # + $num_large_pseudoprime_tests
                 + 10*$extra  # Large Carmichael numbers
+                + 2 # M-R-random
                 + 0;
 
 eval { is_strong_pseudoprime(2047); };
@@ -216,4 +218,18 @@ if ($extra) {
   $n = "2809386136371438866496346539320857607283794588353401165473007394921174159995576890097633348301878401799853448496604965862616291048652062065394646956750323263193037964463262192320342740843556773326129475220032687577421757298519461662249735906372935033549531355723541168448473213797808686850657266188854910604399375221284468243956369013816289853351613404802033369894673267294395882499368769744558478456847832293372532910707925159549055961870528474205973317584333504757691137280936247019772992086410290579840045352494329434008415453636962234340836064927449224611783307531275541463776950841504387756099277118377038405235871794332425052938384904092351280663156507379159650872073401637805282499411435158581593146712826943388219341340599170371727498381901415081480224172469034841153893464174362543356514320522139692755430021327765409775374978255770027259819794532960997484676733140078317807018465818200888425898964847614568913543667470861729894161917981606153150551439410460813448153180857197888310572079656577579695814664713878369660173739371415918888444922272634772987239224582905405240454751027613993535619787590841842251056960329294514093407010964283471430374834873427180817297408975879673867";
   is( is_strong_pseudoprime($n, @{primes(2,1008)}), 1, "280...867 is spsp(1..876)" );
   is( is_strong_pseudoprime($n, 1009), 0, "280..867 is found composite by base 877" );
+}
+
+{
+  my @mrs = map { miller_rabin_random($_, 0) } 0 .. 999;
+  my @expect = (1) x 1000;
+  is_deeply( [@mrs], [@expect], "Miller-Rabin with 0 random bases" );
+}
+{
+  # This is the number above which fails the first 168 bases.
+  my $n = "2809386136371438866496346539320857607283794588353401165473007394921174159995576890097633348301878401799853448496604965862616291048652062065394646956750323263193037964463262192320342740843556773326129475220032687577421757298519461662249735906372935033549531355723541168448473213797808686850657266188854910604399375221284468243956369013816289853351613404802033369894673267294395882499368769744558478456847832293372532910707925159549055961870528474205973317584333504757691137280936247019772992086410290579840045352494329434008415453636962234340836064927449224611783307531275541463776950841504387756099277118377038405235871794332425052938384904092351280663156507379159650872073401637805282499411435158581593146712826943388219341340599170371727498381901415081480224172469034841153893464174362543356514320522139692755430021327765409775374978255770027259819794532960997484676733140078317807018465818200888425898964847614568913543667470861729894161917981606153150551439410460813448153180857197888310572079656577579695814664713878369660173739371415918888444922272634772987239224582905405240454751027613993535619787590841842251056960329294514093407010964283471430374834873427180817297408975879673867";
+  # 33 random bases on a 3948 bit number => p < 1e-200.
+  # This is why we use k random bases and not the first k bases.
+  my $isprime = miller_rabin_random($n, 33);
+  is($isprime, 0, "Miller-Rabin with 100 uniform random bases for n returns prime" );
 }
